--- a/index.html
+++ b/index.html
@@ -338,6 +338,125 @@
 	</div>
 </section>
 
+				<section class="steps">
+	<h2 class="title steps__title">этапы работы с нами</h2>
+	<div class="steps__flex">
+		<div class="steps__item item-steps">
+			<div class="item-steps__content">
+				<div class="item-steps__number">01</div>
+				<h3 class="item-steps__title">
+					Проводим комплексный аудит сайта и конкурентов
+				</h3>
+				<p class="item-steps__descr">
+					Определяем точки роста и прогнозы по результатам
+				</p>
+			</div>
+			<div class="item-steps__arrow-mobile">
+				<img
+					src="img/steps/steps-arrow-mobile-right.svg"
+					alt="steps-arrow-mobile-right"
+				/>
+			</div>
+			<div class="item-steps__arrow">
+				<img src="img/steps/steps-arrow-desktop.svg" alt="arrow" />
+			</div>
+		</div>
+
+		<div class="steps__item item-steps">
+			<div class="item-steps__arrow-mobile">
+				<img
+					src="img/steps/steps-arrow-mobile-left.svg"
+					alt="steps-arrow-mobile-left"
+				/>
+			</div>
+			<div class="item-steps__content">
+				<div class="item-steps__number">02</div>
+				<h3 class="item-steps__title">
+					Разрабатываем индивидуальную стратегию продвижения
+				</h3>
+				<p class="item-steps__descr">
+					Исходя из целей и задач бизнеса для продвижения в Яндекс и Google
+				</p>
+			</div>
+			<div class="item-steps__arrow">
+				<img src="img/steps/steps-arrow-desktop.svg" alt="arrow" />
+			</div>
+		</div>
+
+		<div class="steps__item item-steps">
+			<div class="item-steps__content">
+				<div class="item-steps__number">03</div>
+				<h3 class="item-steps__title">Формируем семантику для продвижения</h3>
+				<p class="item-steps__descr">
+					Поисковые запросы и необходимую структуру сайта
+				</p>
+			</div>
+			<div class="item-steps__arrow-mobile">
+				<img
+					src="img/steps/steps-arrow-mobile-right.svg"
+					alt="steps-arrow-mobile-right"
+				/>
+			</div>
+		</div>
+		<div class="steps__item item-steps">
+			<div class="item-steps__arrow-mobile">
+				<img
+					src="img/steps/steps-arrow-mobile-left.svg"
+					alt="steps-arrow-mobile-left"
+				/>
+			</div>
+			<div class="item-steps__content">
+				<div class="item-steps__number">04</div>
+				<h3 class="item-steps__title">
+					Ведем внешнюю и внутреннюю оптимизацию
+				</h3>
+				<p class="item-steps__descr">
+					Поведенческие, коммерческие, текстовые и ссылочные факторы
+					ранжирования
+				</p>
+			</div>
+			<div class="item-steps__arrow">
+				<img src="img/steps/steps-arrow-desktop.svg" alt="arrow" />
+			</div>
+		</div>
+		<div class="steps__item item-steps">
+			<div class="item-steps__content">
+				<div class="item-steps__number">05</div>
+				<h3 class="item-steps__title">Наполняем сайт контентом</h3>
+				<p class="item-steps__descr">
+					Расширяем товарный ассортимент, подбираем материал для наполнения
+					сайта, пишем тексты
+				</p>
+			</div>
+			<div class="item-steps__arrow-mobile">
+				<img
+					src="img/steps/steps-arrow-mobile-right.svg"
+					alt="steps-arrow-mobile-right"
+				/>
+			</div>
+			<div class="item-steps__arrow">
+				<img src="img/steps/steps-arrow-desktop.svg" alt="arrow" />
+			</div>
+		</div>
+		<div class="steps__item item-steps">
+			<div class="item-steps__arrow-mobile">
+				<img
+					src="img/steps/steps-arrow-mobile-left.svg"
+					alt="steps-arrow-mobile-left"
+				/>
+			</div>
+			<div class="item-steps__content">
+				<div class="item-steps__number">06</div>
+				<h3 class="item-steps__title">Оцениваем эффективность работ</h3>
+				<p class="item-steps__descr">
+					Анализируем результаты, ищем точки роста, корректируем или развиваем
+					стратегию
+				</p>
+			</div>
+		</div>
+	</div>
+</section>
+
 			</main>
 		</div>
 		<footer class="footer"></footer>
