--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 		href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&family=Montserrat:wght@100..900&family=Roboto+Condensed:ital,wght@1,900&family=Roboto:wght@400;500;700;900&display=swap"
 		rel="stylesheet"
 	/>
+	<link
+		rel="stylesheet"
+		href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
+	/>
 	<link rel="stylesheet" href="./styles/style.css" />
 	<title>Main Page</title>
 </head>
@@ -33,6 +37,7 @@
 			<li class="nav__item">
 				<a href="#" class="nav__link nav__link_inverted">Наш блог</a>
 			</li>
+			<div class="nav__close">&times;</div>
 		</ul>
 		<div class="nav__socials socials">
 			<a href="#" class="socials__link"
@@ -459,8 +464,216 @@
 
 			</main>
 		</div>
-		<footer class="footer"></footer>
+		<div class="portfolio">
+	<h2 class="title portfolio__title">кейсы</h2>
+	<div class="portfolio__slider swiper">
+		<div class="portfolio__wrapper swiper-wrapper">
+			<div class="portfolio__slide swiper-slide">
+				<div class="portfolio__client">
+					<div class="portfolio__user">
+						<div class="portfolio__user-img">
+							<img
+								src="img/portfolio/portfolio-user-img.png"
+								alt="portfolio user img"
+							/>
+						</div>
+						<div class="portfolio__user-name">Грузовая разборка</div>
+					</div>
+					<div class="portfolio__location">
+						<img src="img/icons/location.svg" alt="location icon" />
+						<span>Самара</span>
+					</div>
+				</div>
+				<div class="portfolio__graphic-title">График роста позиций:</div>
+				<p class="portfolio__descr">
+					Это разборка грузовиков и продажа проверенных б/у запчастей. Мы
+					предлагаем широкий выбор деталей по доступным ценам, обеспечивая
+					надёжные решения для вашего автотранспорта.
+				</p>
+				<div class="portfolio__graphic-img">
+					<img src="img/portfolio/graphic.png" alt="Graphic" />
+				</div>
+				<div class="portfolio__percentage">
+					<span>90%</span
+					><span class="portfolio__percentage-text">Видимость сайта</span>
+				</div>
+				<div class="portfolio__term">
+					<div class="portfolio__term-top">
+						<span>6</span><span class="portfolio__term-name"> месяцев </span>
+					</div>
+					<span class="portfolio__term-text">Срок выхода в ТОП</span>
+				</div>
+				<div class="portfolio__textblock-small">
+					<span
+						>На 40% больше обращений и звонков с сайта от реальных клиентов,
+						заинтересованных в покупке.</span
+					>
+				</div>
+				<div class="portfolio__textblock-big">
+					Благодаря целевому SEO-продвижению, компания "Грузовая разборка"
+					превратила свой сайт в мощный канал продаж, который продолжает
+					привлекать новых клиентов и приносить результат!
+					<img src="img/icons/arrow-right-black.svg" alt="arrow right black" />
+				</div>
+				<a href="#" class="button button_red">читать подробнее</a>
+			</div>
+			<div class="portfolio__slide swiper-slide">
+				<div class="portfolio__client">
+					<div class="portfolio__user">
+						<div class="portfolio__user-img">
+							<img
+								src="img/portfolio/portfolio-user-img.png"
+								alt="portfolio user img"
+							/>
+						</div>
+						<div class="portfolio__user-name">Грузовая разборка</div>
+					</div>
+					<div class="portfolio__location">
+						<img src="img/icons/location.svg" alt="location icon" />
+						<span>Самара</span>
+					</div>
+				</div>
+				<div class="portfolio__graphic-title">График роста позиций:</div>
+				<p class="portfolio__descr">
+					Это разборка грузовиков и продажа проверенных б/у запчастей. Мы
+					предлагаем широкий выбор деталей по доступным ценам, обеспечивая
+					надёжные решения для вашего автотранспорта.
+				</p>
+				<div class="portfolio__graphic-img">
+					<img src="img/portfolio/graphic.png" alt="Graphic" />
+				</div>
+				<div class="portfolio__percentage">
+					<span>90%</span
+					><span class="portfolio__percentage-text">Видимость сайта</span>
+				</div>
+				<div class="portfolio__term">
+					<div class="portfolio__term-top">
+						<span>6</span><span class="portfolio__term-name"> месяцев </span>
+					</div>
+					<span class="portfolio__term-text">Срок выхода в ТОП</span>
+				</div>
+				<div class="portfolio__textblock-small">
+					<span
+						>На 40% больше обращений и звонков с сайта от реальных клиентов,
+						заинтересованных в покупке.</span
+					>
+				</div>
+				<div class="portfolio__textblock-big">
+					Благодаря целевому SEO-продвижению, компания "Грузовая разборка"
+					превратила свой сайт в мощный канал продаж, который продолжает
+					привлекать новых клиентов и приносить результат!
+					<img src="img/icons/arrow-right-black.svg" alt="arrow right black" />
+				</div>
+				<a href="#" class="button button_red">читать подробнее</a>
+			</div>
+			<div class="portfolio__slide swiper-slide">
+				<div class="portfolio__client">
+					<div class="portfolio__user">
+						<div class="portfolio__user-img">
+							<img
+								src="img/portfolio/portfolio-user-img.png"
+								alt="portfolio user img"
+							/>
+						</div>
+						<div class="portfolio__user-name">Грузовая разборка</div>
+					</div>
+					<div class="portfolio__location">
+						<img src="img/icons/location.svg" alt="location icon" />
+						<span>Самара</span>
+					</div>
+				</div>
+				<div class="portfolio__graphic-title">График роста позиций:</div>
+				<p class="portfolio__descr">
+					Это разборка грузовиков и продажа проверенных б/у запчастей. Мы
+					предлагаем широкий выбор деталей по доступным ценам, обеспечивая
+					надёжные решения для вашего автотранспорта.
+				</p>
+				<div class="portfolio__graphic-img">
+					<img src="img/portfolio/graphic.png" alt="Graphic" />
+				</div>
+				<div class="portfolio__percentage">
+					<span>90%</span
+					><span class="portfolio__percentage-text">Видимость сайта</span>
+				</div>
+				<div class="portfolio__term">
+					<div class="portfolio__term-top">
+						<span>6</span><span class="portfolio__term-name"> месяцев </span>
+					</div>
+					<span class="portfolio__term-text">Срок выхода в ТОП</span>
+				</div>
+				<div class="portfolio__textblock-small">
+					<span
+						>На 40% больше обращений и звонков с сайта от реальных клиентов,
+						заинтересованных в покупке.</span
+					>
+				</div>
+				<div class="portfolio__textblock-big">
+					Благодаря целевому SEO-продвижению, компания "Грузовая разборка"
+					превратила свой сайт в мощный канал продаж, который продолжает
+					привлекать новых клиентов и приносить результат!
+					<img src="img/icons/arrow-right-black.svg" alt="arrow right black" />
+				</div>
+				<a href="#" class="button button_red">читать подробнее</a>
+			</div>
+		</div>
+		<div class="portfolio__pagination swiper-pagination"></div>
+	</div>
+</div>
 
+		<footer class="footer">
+	<a href="#" class="logo footer__logo">
+		<div class="logo__top">Веб-студия</div>
+		<div class="logo__bottom">NEIROBIT</div>
+	</a>
+	<div class="footer__center">
+		<ul class="footer__list">
+			<li class="footer__item">
+				<a href="#" class="footer__link">Продвижение</a>
+			</li>
+			<li class="footer__item">
+				<a href="#" class="footer__link">Ваша выгода</a>
+			</li>
+			<li class="footer__item"><a href="#" class="footer__link">Тарифы</a></li>
+			<li class="footer__item">
+				<a href="#" class="footer__link">ПОРТФОЛИО</a>
+			</li>
+			<li class="footer__item">
+				<a href="#" class="footer__link">наша студия</a>
+			</li>
+			<li class="footer__item">
+				<a href="#" class="footer__link">Разработка сайтов</a>
+			</li>
+			<li class="footer__item">
+				<a href="#" class="footer__link footer__link_inverted">Наш блог</a>
+			</li>
+			<div class="footer__close">&times;</div>
+		</ul>
+		<div class="footer__socials socials">
+			<a href="#" class="socials__link"
+				><img
+					src="img/icons/vk-light.svg"
+					alt="vk-icon"
+					class="socials__img" /></a
+			><a href="#" class="socials__link"
+				><img
+					src="img/icons/tg-light.svg"
+					alt="telegram-icon"
+					class="socials__img" /></a
+			><a href="#" class="socials__link"
+				><img
+					src="img/icons/dzen-light.svg"
+					alt="dzen-icon"
+					class="socials__img"
+			/></a>
+		</div>
+	</div>
+	<div class="footer__info info-footer">
+		<a href="tel:+78004551243" class="info-footer__phone">8 (800) 455-12-43</a>
+		<div class="info-footer__time">Ежедневно c 9:00 до 18:00</div>
+	</div>
+</footer>
+
+		<script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 		<script src="./js/index.js"></script>
 	</body>
 </html>
